--- a/django_admin_flexlist/templates/django_admin_flexlist/change_list_head.html
+++ b/django_admin_flexlist/templates/django_admin_flexlist/change_list_head.html
@@ -1,4 +1,5 @@
 {% load static %}
 
+<link rel="stylesheet" href="{% static 'django_admin_flexlist/css/colors.css' %}">
 <link rel="stylesheet" href="{% static 'django_admin_flexlist/css/change_list.css' %}">
 {% include "django_admin_flexlist/change_list_script.html" %}
